Impl db